# Paralela-Proyecto-1

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  quick_setup.ps1  tooling_report.txt  vcpkg.json
data/results/: omp_for_N2000_T1_Sstatic_r1.csv  omp_for_N2000_T1_Sstatic_r10.csv  omp_for_N2000_T1_Sstatic_r2.csv  omp_for_N2000_T1_Sstatic_r3.csv  omp_for_N2000_T1_Sstatic_r4.csv  omp_for_N2000_T1_Sstatic_r5.csv  omp_for_N2000_T1_Sstatic_r6.csv  omp_for_N2000_T1_Sstatic_r7.csv  omp_for_N2000_T1_Sstatic_r8.csv  omp_for_N2000_T1_Sstatic_r9.csv  omp_for_smoke.csv  omp_simd_N2000_T1_Sstatic_r1.csv  omp_simd_N2000_T1_Sstatic_r10.csv  omp_simd_N2000_T1_Sstatic_r2.csv  omp_simd_N2000_T1_Sstatic_r3.csv  omp_simd_N2000_T1_Sstatic_r4.csv  omp_simd_N2000_T1_Sstatic_r5.csv  omp_simd_N2000_T1_Sstatic_r6.csv  omp_simd_N2000_T1_Sstatic_r7.csv  omp_simd_N2000_T1_Sstatic_r8.csv  omp_simd_N2000_T1_Sstatic_r9.csv  omp_tasks_N2000_T1_Sstatic_r1.csv  omp_tasks_N2000_T1_Sstatic_r10.csv  omp_tasks_N2000_T1_Sstatic_r2.csv  omp_tasks_N2000_T1_Sstatic_r3.csv  omp_tasks_N2000_T1_Sstatic_r4.csv  omp_tasks_N2000_T1_Sstatic_r5.csv  omp_tasks_N2000_T1_Sstatic_r6.csv  omp_tasks_N2000_T1_Sstatic_r7.csv  omp_tasks_N2000_T1_Sstatic_r8.csv  omp_tasks_N2000_T1_Sstatic_r9.csv  seq_N2000_r1.csv  seq_N2000_r10.csv  seq_N2000_r2.csv  seq_N2000_r3.csv  seq_N2000_r4.csv  seq_N2000_r5.csv  seq_N2000_r6.csv  seq_N2000_r7.csv  seq_N2000_r8.csv  (+5 more)
docs/annexes/: anexo1-diagrama-flujo.md  anexo2-catalogo-funciones.md  anexo3-bitacora-pruebas.md
scripts/: analyze.py  analyze_plots.py  analyze_plots_multi.py  run_bench_schedules.ps1  run_bench_simd.ps1  run_bench_tasks.ps1  summarize_speedup_schedules.ps1  summarize_speedup_simd.ps1  summarize_speedup_tasks.ps1
src/app/: main.cpp
src/core/: grid.cpp  grid.hpp  physics.cpp  physics.hpp  rng.hpp  state.hpp  types.hpp
src/gfx/: renderer.hpp  renderer_dummy.cpp  renderer_sdl2.cpp  renderer_sdl2_backup.cpp  renderer_sdl2_ultra.cpp
src/omp/: update_omp_for.cpp  update_omp_for.hpp  update_omp_simd.cpp  update_omp_simd.hpp  update_omp_tasks.cpp  update_omp_tasks.hpp  update_seq.cpp  update_seq.hpp
